wk_taa_taaqa/src/objects/Assignment_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>AISR__c</fullName>
        <inlineHelpText>AISR</inlineHelpText>
        <label>AISR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASR_Indirect_Corp_Software__c</fullName>
        <description>ASR Indirect (Corp Software)</description>
        <inlineHelpText>ASR Indirect (Corp Software)</inlineHelpText>
        <label>ASR Indirect (Corp Software)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Direct__c</fullName>
        <inlineHelpText>FSR - Direct (Corp Software)</inlineHelpText>
        <label>Corp Direct</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Indirect__c</fullName>
        <inlineHelpText>FSR - Indirect (Corp Sotware)</inlineHelpText>
        <label>Corp Indirect</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISR_Indirect__c</fullName>
        <inlineHelpText>ISR - Indirect (Corp Software)</inlineHelpText>
        <label>ISR Indirect</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsNamedAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This assignment matrix belongs to Named Account</inlineHelpText>
        <label>IsNamedAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <inlineHelpText>Market Sub-Segment</inlineHelpText>
        <label>Market Segment</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Sub_Segment__c</fullName>
        <inlineHelpText>Market Segment</inlineHelpText>
        <label>Market Sub Segment</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_SAM_CNAM__c</fullName>
        <inlineHelpText>NAM- National Account Manager, SAM-Strategic Account Manager, CNAM-Corporate Account Manager</inlineHelpText>
        <label>NAM/SAM/CNAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NAM - National Accounts</fullName>
                </value>
                <value>
                    <fullName>SAM - Strategic Account Manager</fullName>
                </value>
                <value>
                    <fullName>CAM - Corporate Account Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NamedAccountType__c</fullName>
        <label>NamedAccountType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Corporate National</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pro_SW_FSR__c</fullName>
        <inlineHelpText>FSR- Professional Sotware</inlineHelpText>
        <label>Pro SW FSR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_SW_ISR__c</fullName>
        <inlineHelpText>ISR - Professional Software</inlineHelpText>
        <label>Pro SW ISR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QP__c</fullName>
        <inlineHelpText>QP Rep</inlineHelpText>
        <label>QP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_L_ASR__c</fullName>
        <inlineHelpText>ASR - Research and Learning</inlineHelpText>
        <label>R&amp;L ASR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_L_FSR__c</fullName>
        <inlineHelpText>FSR - Research and Learning</inlineHelpText>
        <label>R&amp;L FSR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_L_ISR__c</fullName>
        <inlineHelpText>ISR Research and learning</inlineHelpText>
        <label>R&amp;L ISR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STG_Vertical__c</fullName>
        <label>STG_Vertical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_ASR__c</fullName>
        <inlineHelpText>ASR - Professional Software</inlineHelpText>
        <label>SW ASR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Source__c</fullName>
        <inlineHelpText>ASR - R&amp;L - Service Source</inlineHelpText>
        <label>Service Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC__c</fullName>
        <label>TC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>type</inlineHelpText>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Assignment Matrix</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Market_Segment__c</columns>
        <columns>Market_Sub_Segment__c</columns>
        <columns>IsNamedAccount__c</columns>
        <columns>NamedAccountType__c</columns>
        <columns>Type__c</columns>
        <columns>NAM_SAM_CNAM__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Assignment Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Matrixs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>